<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tm_moveit_cpp_demo</name>
  <version>1.1.0</version>
  <description>
     Techman Robot for running a MoveIt2 demo
  </description>

  <maintainer email="ken.tsai@tm-robot.com">Ken Tsai</maintainer>
  <maintainer email="leo.wu@tm-robot.com">leowu</maintainer>
  <maintainer email="yh.wang@tm-robot.com">Yh Wang</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>moveit_common</build_depend>

  <depend>moveit_ros_planning_interface</depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>warehouse_ros_mongo</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
